--- a/Web/index.html
+++ b/Web/index.html
@@ -89,9 +89,52 @@
       <article id="about" class="container-fluid bdr">
         <h1>About</h1>
       </article>
+      
+      <!-- team section -->
       <aside>
-        <article id="team" class="container-fluid bdr">
-          <h1>Team</h1>
+        <article id="team" class="container-fluid mb-4 p-3">
+          <div class="container my-1 py-4 text-center">
+            <div class="row">
+              <div class="col">
+                <h1>OUR TEAM</h1>
+              </div>
+            </div>
+          </div>
+  
+          <!-- team card -->
+          <div class="row align-content-center my-2 py-4 px-5">
+            <div class="col-lg-3 col-md-3 col-sm-6 my-4 mx-auto">
+              <div class="card text-center border-0 bg-transparent">
+                  <img class=" card-img-top mb-3" src="./assets/hanif.png" alt="">
+                  <h5 class="card-title">HANIF AL IRSYAD</h5>
+                  <p class="card-text">M183X0334</p>
+              </div>
+            </div>
+  
+            <div class="col-lg-3  col-md-3 col-sm-6 my-4 mx-auto">
+              <div class="card text-center border-0 bg-transparent">
+                  <img class="card-img-top mb-3" src="./assets/hamza.png" alt="">
+                  <h5 class="card-title">HAMZA FIRDAUS</h5>
+                  <p class="card-text">M128X0214</p>
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-3 col-sm-6 my-4 mx-auto">
+              <div class="card text-center border-0 bg-transparent">
+                  <img class="card-img-top mb-3" src="./assets/anas.png" alt="">
+                  <h5 class="card-title">ANAS FIKRI HANIF</h5>
+                  <p class="card-text">M183X0321</p>
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-3 col-sm-6 my-4 mx-auto">
+              <div class="card text-center border-0 bg-transparent">
+                  <img class="card-img-top mb-3" src="./assets/bayu.png" alt="">
+                  <h5 class="card-title">BAYU NUGROHO</h5>
+                  <p class="card-text">M128X0208</p>
+              </div>
+            </div>
+          </div>
         </article>
       </aside>
     </main>
