--- a/Web/index.html
+++ b/Web/index.html
@@ -35,7 +35,10 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse pp" id="navbarSupportedContent">
+          <div
+            class="collapse navbar-collapse ppns"
+            id="navbarSupportedContent"
+          >
             <div class="me-auto"></div>
             <ul class="navbar-nav mb-2 mb-lg-0">
               <li class="nav-item">
@@ -63,7 +66,7 @@
     <main>
       <article
         id="home"
-        class="container-fluid d-flex align-items-center justify-content-center flex-column"
+        class="vh-100 container-fluid d-flex align-items-center justify-content-center flex-column"
       >
         <section class="home-content">
           <h1 class="osw text-center text-white"><b>RECCOFFEE</b></h1>
@@ -75,10 +78,45 @@
           F I N D
         </button>
       </article>
-      <article id="menu" class="container-fluid bdr">
-        <section>
-          <h1>Menu</h1>
-        </section>
+      <article id="menu" class="container-fluid min-vh-100 d-flex flex-column">
+        <div class="row d-flex text-center p-5">
+          <h3 class="osw">WE BELIEVE IN GREAT-TASTING COFFEE</h3>
+        </div>
+        <div class="flex-fill row text-center p-3">
+          <div
+            class="col-sm d-flex flex-column align-items-center justify-content-center"
+          >
+            <img src="null" class="cfm" />
+            <p class="ppns fw-semibold fs-3">B L A C K</p>
+            <p class="ppns sub-title">
+              Black coffee is as simple as it gets with ground coffee beans
+              steeped in hot water, served warm. And if you want to sound fancy,
+              you can call black coffee by its proper name: cafe noir.
+            </p>
+          </div>
+          <div
+            class="col-sm d-flex flex-column align-items-center justify-content-center"
+          >
+            <img src="" class="cfm" />
+            <p class="ppns fw-semibold fs-3">B L A C K</p>
+            <p class="ppns sub-title">
+              Black coffee is as simple as it gets with ground coffee beans
+              steeped in hot water, served warm. And if you want to sound fancy,
+              you can call black coffee by its proper name: cafe noir.
+            </p>
+          </div>
+          <div
+            class="col-sm d-flex flex-column align-items-center justify-content-center"
+          >
+            <img src="" class="cfm" />
+            <p class="ppns fw-semibold fs-3">B L A C K</p>
+            <p class="ppns sub-title">
+              Black coffee is as simple as it gets with ground coffee beans
+              steeped in hot water, served warm. And if you want to sound fancy,
+              you can call black coffee by its proper name: cafe noir.
+            </p>
+          </div>
+        </div>
       </article>
       <article id="find" class="container-fluid bdr">
         <h1>Find</h1>
@@ -101,7 +139,7 @@
         <img src="" alt="" />
       </div>
     </footer>
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./src/script/navbar.js"></script>
   </body>
 </html>
