Menambahkan komponen di section About

--- a/Web/index.html
+++ b/Web/index.html
@@ -86,8 +86,18 @@
       <article id="shop" class="container-fluid bdr">
         <h1>Shop</h1>
       </article>
-      <article id="about" class="container-fluid bdr">
-        <h1>About</h1>
+
+      <!-- about section -->
+      <article id="about" class="container-fluid">
+        <div class="row flex-column-reverse flex-lg-row">
+          <div class="col p-5 align-self-center">
+            <h1 class="osw">ABOUT US</h1>
+            <p class="ppns">RECCOFEE adalah sebuah website yang digunakan untuk memberikan rekomendasi jenis kopi berdasar preferensi pengguna. tetapi tidak hanya itu saja kami juga memberikan informasi seputar minuman kopi dan memberikan fitur untuk melakukan pembelian biji kopi yang berkualitas.</p>
+          </div>
+          <div class="col p-0">
+            <img src="https://raw.githubusercontent.com/Hanifanta/Capstone_RECCOFFEE/main/Web/assets/pictureAbout.png" alt="" class="img-fluid w-100">
+          </div>
+        </div>
       </article>
       
       <!-- team section -->
@@ -106,38 +116,39 @@
             <div class="col-lg-3 col-md-3 col-sm-6 my-4 mx-auto">
               <div class="card text-center border-0 bg-transparent">
                   <img class=" card-img-top mb-3" src="./assets/hanif.png" alt="">
-                  <h5 class="card-title">HANIF AL IRSYAD</h5>
-                  <p class="card-text">M183X0334</p>
+                  <h5 class="card-title osw">HANIF AL IRSYAD</h5>
+                  <p class="card-text ppns">M183X0334</p>
               </div>
             </div>
   
             <div class="col-lg-3  col-md-3 col-sm-6 my-4 mx-auto">
               <div class="card text-center border-0 bg-transparent">
                   <img class="card-img-top mb-3" src="./assets/hamza.png" alt="">
-                  <h5 class="card-title">HAMZA FIRDAUS</h5>
-                  <p class="card-text">M128X0214</p>
+                  <h5 class="card-title osw">HAMZA FIRDAUS</h5>
+                  <p class="card-text ppns ppns">M128X0214</p>
               </div>
             </div>
   
             <div class="col-lg-3 col-md-3 col-sm-6 my-4 mx-auto">
               <div class="card text-center border-0 bg-transparent">
                   <img class="card-img-top mb-3" src="./assets/anas.png" alt="">
-                  <h5 class="card-title">ANAS FIKRI HANIF</h5>
-                  <p class="card-text">M183X0321</p>
+                  <h5 class="card-title osw">ANAS FIKRI HANIF</h5>
+                  <p class="card-text ppns">M183X0321</p>
               </div>
             </div>
   
             <div class="col-lg-3 col-md-3 col-sm-6 my-4 mx-auto">
               <div class="card text-center border-0 bg-transparent">
                   <img class="card-img-top mb-3" src="./assets/bayu.png" alt="">
-                  <h5 class="card-title">BAYU NUGROHO</h5>
-                  <p class="card-text">M128X0208</p>
+                  <h5 class="card-title osw">BAYU NUGROHO</h5>
+                  <p class="card-text ppns">M128X0208</p>
               </div>
             </div>
           </div>
         </article>
       </aside>
     </main>
+
     <footer>
       <div id="foot" class="container-fluid bdr">
         <p>Copyright &#169; 2022 ReCoffe</p>
