Update tampilan footer

--- a/Web/index.html
+++ b/Web/index.html
@@ -160,9 +160,10 @@
     </main>
 
     <footer>
-      <div id="foot" class="container-fluid bdr">
-        <p>Copyright &#169; 2022 ReCoffe</p>
-        <img src="" alt="" />
+      <div id="foot" class="d-flex p-3 flex-lg-row flex-column-reverse
+      justify-content-between align-items-center">
+        <div class="ppns text-wrap">Copyright&copy; RECOFFEE 2022</div>
+        <img src="./assets/GitHub-logo.png" alt="github"/>
       </div>
     </footer>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
