Memindahkan code ke entry.

--- a/Web/index.html
+++ b/Web/index.html
@@ -5,11 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recoffe</title>
-    <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./src/styles/style.css" />
-    <link rel="stylesheet" href="./src//styles/custom.css" />
   </head>
-  <body id="homepage">
+  <body>
     <header>
       <nav id="navbar_top" class="navbar navbar-expand-sm bg-light">
         <div class="container-fluid">
@@ -247,12 +245,6 @@
         <img src="./assets/GitHub-logo.png" alt="github" />
       </div>
     </footer>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.0.2/glide.js"></script>
-    <script src="./src/script/navbar.js"></script>
-    <script type="module" src="./src/script/components/team-list.js"></script>
-    <script type="module" src="./src/script/components/shop-grid.js"></script>
-    <script src="./src/script/components/corousel.js"></script>
-    <script src="./src/script/components/slider.js"></script>
+    <script src="app.js" type="module"></script>
   </body>
 </html>
