Fix error dalam layout

--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -5,19 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recoffe</title>
-    <!-- <link rel="stylesheet" href="./src/styles/style.css" /> -->
   </head>
   <body>
     <header>
       <nav id="navbar_top" class="navbar navbar-expand-sm bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img
-              src="https://raw.githubusercontent.com/Hanifanta/Capstone_RECCOFFEE/main/Web/assets/Icon-recoffe.png"
-              alt="ReCoffee"
-              width="30"
-              height="24"
-            />
+            
           </a>
           <button
             class="navbar-toggler"
@@ -184,7 +178,7 @@
       </article>
 
       <article id="shop" class="container-fluid">
-        <div class="container my-1 py-4 text-center">
+        <div class="container py-4 text-center">
           <div class="row">
             <div class="col">
               <h1 class="osw">BUY HIGH QUALITY COFFEE</h1>
@@ -208,12 +202,8 @@
               berkualitas.
             </p>
           </div>
-          <div class="col p-0">
-            <img
-              src="https://raw.githubusercontent.com/Hanifanta/Capstone_RECCOFFEE/main/Web/assets/pictureAbout.png"
-              alt=""
-              class="img-fluid w-100"
-            />
+          <div id="picture-about" class="col p-0">
+            
           </div>
         </div>
       </article>
@@ -221,7 +211,7 @@
       <!-- team section -->
       <aside>
         <article id="team" class="container-fluid">
-          <div class="container my-1 py-4 text-center">
+          <div class="container py-4 text-center">
             <div class="row">
               <div class="col">
                 <h1 class="osw">OUR TEAM</h1>
@@ -230,7 +220,7 @@
           </div>
 
           <!-- team card -->
-          <team-list class="row align-content-center my-2 py-4 px-5">
+          <team-list class="row align-content-center py-4 px-5">
           </team-list>
         </article>
       </aside>
