optimasi slider dan membuat folder 'data'

--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -10,9 +10,7 @@
     <header>
       <nav id="navbar_top" class="navbar navbar-expand-sm bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            
-          </a>
+          <a class="navbar-brand" href="#"> </a>
           <button
             class="navbar-toggler"
             type="button"
@@ -137,24 +135,38 @@
             <p>Search for coffee in the flavor you want</p>
           </div>
           <div class="sliding">
-            <p>Sweet</p>
-            <div class="range-input">
-              <input type="range" min="0" max="10" value="0" step="1" />
-              <div class="value">
+            <p>Aroma</p>
+            <div class="range-input1">
+              <input type="range" min="0" max="10" value="0" step="0.1" />
+              <div class="value1">
                 <div></div>
               </div>
             </div>
             <p>Accidity</p>
             <div class="range-input2">
-              <input type="range" min="0" max="10" value="0" step="1" />
+              <input type="range" min="0" max="10" value="0" step="0.1" />
               <div class="value2">
                 <div></div>
               </div>
             </div>
             <p>Body</p>
             <div class="range-input3">
-              <input type="range" min="0" max="10" value="0" step="1" />
+              <input type="range" min="0" max="10" value="0" step="0.1" />
               <div class="value3">
+                <div></div>
+              </div>
+            </div>
+            <p>Flavor</p>
+            <div class="range-input4">
+              <input type="range" min="0" max="10" value="0" step="0.1" />
+              <div class="value4">
+                <div></div>
+              </div>
+            </div>
+            <p>Aftertaste</p>
+            <div class="range-input5">
+              <input type="range" min="0" max="10" value="0" step="0.1" />
+              <div class="value5">
                 <div></div>
               </div>
             </div>
@@ -202,9 +214,7 @@
               berkualitas.
             </p>
           </div>
-          <div id="picture-about" class="col p-0">
-            
-          </div>
+          <div id="picture-about" class="col p-0"></div>
         </div>
       </article>
 
@@ -220,9 +230,7 @@
           </div>
 
           <!-- team card -->
-          <team-list class="row align-content-center py-4 px-5">
-          </team-list>
-
+          <team-list class="row align-content-center py-4 px-5"> </team-list>
         </article>
       </aside>
     </main>
@@ -230,7 +238,8 @@
     <footer>
       <div
         id="foot"
-        class="d-flex p-3 flex-lg-row flex-column-reverse justify-content-between align-items-center">
+        class="d-flex p-3 flex-lg-row flex-column-reverse justify-content-between align-items-center"
+      >
         <div class="ppns text-wrap">Copyright&copy; RECOFFEE 2022</div>
       </div>
     </footer>
