Jquery pada main dan optimasi navbar

--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <nav id="navbar_top" class="navbar navbar-expand-sm bg-light">
+      <nav class="navbar navbar-expand-sm bg-light fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"> </a>
           <button
@@ -35,6 +35,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link ppns" href="#menu">Menu</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link ppns" href="#find">Find</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link ppns" href="#shop">Shop</a>
