--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -254,6 +254,17 @@
         </section>
       </article>
 
+      <article
+        id="rekomendasi"
+        class="ppns d-flex flex-column text-center p-lg-5"
+      >
+        <div>
+          <h2 class="osw">COFFE RECOMMENDATIONS</h2>
+          <p>We recommend coffee based on the coffee you are looking for.</p>
+        </div>
+        <section class="item-rekomendasi flex-grow-1"></section>
+      </article>
+
       <article id="shop" class="container-fluid">
         <div class="container py-4 text-center">
           <div class="row">
