--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -151,7 +151,7 @@
       <article id="find" class="container-fluid overflow-hidden">
         <section class="row">
           <!-- range slide rekomenfasi -->
-          <div class="range-rekomendasi col-12 col-md-6 slidee ppns">
+          <div class="range-rekomendasi col-12 col-md-6 ppns">
             <div class="heading-rekomendasi">
               <h4 class="osw fs-3">
                 FIND THE PERFECT COFFEE <span> FOR YOUR TASTE</span>
