--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -200,9 +200,7 @@
             </div>
           </div>
         </div>
-
-        <!-- shop cards -->
-        <shop-grid class="row flex-row flex-nowrap overflow-auto py-3">
+        <shop-grid class="row row-cols-auto px-5 py-3 justify-content-evenly">
         </shop-grid>
       </article>
 
