--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -153,9 +153,9 @@
           <!-- range slide rekomenfasi -->
           <div class="range-rekomendasi col-12 col-md-6 slidee ppns">
             <div class="heading-rekomendasi">
-              <h4 class="osw fs-3">
+              <h5 class="osw fs-3">
                 FIND THE PERFECT COFFEE <span> FOR YOUR TASTE</span>
-              </h4>
+              </h5>
               <p>Search for coffee in the flavor you want</p>
             </div>
             <div class="sliding-slider">
@@ -278,14 +278,132 @@
                     </div>
                   </div>
                   <div class="d-flex flex-column px-3">
-                    <h2 class="recom-name text-dark">David's Nose</h2>
+                    <h2 class="osw recom-name text-dark">David's Nose</h2>
                     <span class="recom-origin text-dark">Honduras Blue Hole Estates</span>
                   </div>
                 </button>
               </h2>
-              <div id="collapseOne" class="accordion-collapse collapsed collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+              <div id="collapseOne" class="accordion-collapse collapsed collapse align-content-start" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate iusto aliquid natus quis dolorum magnam similique repellat quibusdam, ullam sequi commodi iste, maxime a nihil numquam dolore aperiam corrupti? Excepturi!
+                  <div class="row d-flex
+                  justify-content-around">
+                    <div class="col">
+                      <h5>Aroma</h5>
+                      <b>9</b>
+                    </div>
+                    <div class="col">
+                      <h5>Acid</h5>
+                      <b>9</b>
+                    </div>
+                    <div class="col">
+                      <h5>Body</h5>
+                      <b>9</b>
+                    </div>
+                    <div class="col">
+                      <h5>Flavor</h5>
+                      <b>9</b>
+                    </div>
+                    <div class="col">
+                      <h5>Aftertaste</h5>
+                      <b>9</b>
+                    </div>
+                  </div>
+                  <div class="container-fluid text-start">
+                    <p><strong>Description: </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta commodi consectetur cum earum impedit omnis quaerat aspernatur id quae quasi ut rem, asperiores illo expedita voluptate sed blanditiis. Nihil, impedit?</p>
+                  </div>
+                  <button class="btn btn-sm btn-primary text-white fw-bold me-auto">
+                    Search on Google
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  <div class="d-flex">
+                    <div class="recom-score rounded-3">
+                      <strong>96</strong>
+                    </div>
+                  </div>
+                  <div class="d-flex flex-column px-3">
+                    <h2 class="osw recom-name text-dark">David's Nose</h2>
+                    <span class="recom-origin text-dark">Honduras Blue Hole Estates</span>
+                  </div>
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapsed collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <div class="row d-flex
+                  justify-content-around">
+                    <div class="col">
+                      <h5>Aroma</h5>
+                      <b>9</b>
+                    </div>
+                    <div class="col">
+                      <h5>Acid</h5>
+                      <b>9</b>
+                    </div>
+                    <div class="col">
+                      <h5>Body</h5>
+                      <b>9</b>
+                    </div>
+                    <div class="col">
+                      <h5>Flavor</h5>
+                      <b>9</b>
+                    </div>
+                    <div class="col">
+                      <h5>Aftertaste</h5>
+                      <b>9</b>
+                    </div>
+                  </div>
+                  <div class="container-fluid text-start">
+                    <p><strong>Description: </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta commodi consectetur cum earum impedit omnis quaerat aspernatur id quae quasi ut rem, asperiores illo expedita voluptate sed blanditiis. Nihil, impedit?</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  <div class="d-flex">
+                    <div class="recom-score rounded-3">
+                      <strong>96</strong>
+                    </div>
+                  </div>
+                  <div class="d-flex flex-column px-3">
+                    <h2 class="osw recom-name text-dark">David's Nose</h2>
+                    <span class="recom-origin text-dark">Honduras Blue Hole Estates</span>
+                  </div>
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapsed collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <div class="row d-flex
+                  justify-content-around">
+                    <div class="col">
+                      <h5>Aroma</h5>
+                      <b>9</b>
+                    </div>
+                    <div class="col">
+                      <h5>Acid</h5>
+                      <b>9</b>
+                    </div>
+                    <div class="col">
+                      <h5>Body</h5>
+                      <b>9</b>
+                    </div>
+                    <div class="col">
+                      <h5>Flavor</h5>
+                      <b>9</b>
+                    </div>
+                    <div class="col">
+                      <h5>Aftertaste</h5>
+                      <b>9</b>
+                    </div>
+                  </div>
+                  <div class="container-fluid text-start">
+                    <p><strong>Description: </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta commodi consectetur cum earum impedit omnis quaerat aspernatur id quae quasi ut rem, asperiores illo expedita voluptate sed blanditiis. Nihil, impedit?</p>
+                  </div>
                 </div>
               </div>
             </div>
