--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -151,7 +151,7 @@
       <article id="find" class="container-fluid overflow-hidden">
         <section class="row">
           <!-- range slide rekomenfasi -->
-          <div class="range-rekomendasi col-12 col-md-6 ppns">
+          <div class="range-rekomendasi col-12 col-md-6 slidee ppns">
             <div class="heading-rekomendasi">
               <h4 class="osw fs-3">
                 FIND THE PERFECT COFFEE <span> FOR YOUR TASTE</span>
@@ -161,35 +161,35 @@
             <div class="sliding-slider">
               <p>Aroma</p>
               <div class="range-input1">
-                <input type="range" min="0" max="10" value="0" step="0.1" />
+                <input type="range" min="0" max="10" value="0" step="0.1" id="aroma"/>
                 <div class="value1">
                   <div></div>
                 </div>
               </div>
               <p>Accidity</p>
               <div class="range-input2">
-                <input type="range" min="0" max="10" value="0" step="0.1" />
+                <input type="range" min="0" max="10" value="0" step="0.1" id="acid"/>
                 <div class="value2">
                   <div></div>
                 </div>
               </div>
               <p>Body</p>
               <div class="range-input3">
-                <input type="range" min="0" max="10" value="0" step="0.1" />
+                <input type="range" min="0" max="10" value="0" step="0.1" id="body"/>
                 <div class="value3">
                   <div></div>
                 </div>
               </div>
               <p>Flavor</p>
               <div class="range-input4">
-                <input type="range" min="0" max="10" value="0" step="0.1" />
+                <input type="range" min="0" max="10" value="0" step="0.1" id="flavor"/>
                 <div class="value4">
                   <div></div>
                 </div>
               </div>
               <p>Aftertaste</p>
               <div class="range-input5">
-                <input type="range" min="0" max="10" value="0" step="0.1" />
+                <input type="range" min="0" max="10" value="0" step="0.1" id="aftertaste"/>
                 <div class="value5">
                   <div></div>
                 </div>
@@ -198,65 +198,21 @@
               <button
                 type="button"
                 class="btn btn-sm btn-primary text-white fw-bold"
+                id="find-coffee"
               >
                 Search
               </button>
             </div>
           </div>
           <!-- Hasil Rekomendasi -->
-          <div
-            class="hasil-rekomendasi-container col-12 col-md-6 d-flex flex-column"
-          >
-            <div class="hasil-rekomendasi p-5 m-auto d-grid">
-              <div class="row">
-                <div class="rating text-center col-4 col-lg-2 d-grid">
-                  <p class="m-0 mt-auto">Rating</p>
-                  <h1 class="mb-auto">96</h1>
-                </div>
-                <div class="col-8 col-lg-10 d-grid">
-                  <h1 class="m-0 mt-auto">David's Nose</h1>
-                  <p class="m-0 mb-auto">Honduras Blue Hole Estates</p>
-                </div>
-              </div>
-              <div class="row my-3">
-                <div class="para col-6 col-lg-3">
-                  <p>Aroma</p>
-                  <p>Acid</p>
-                  <p>Body</p>
-                  <p>Flavor</p>
-                  <p>AfterTaste</p>
-                </div>
-                <div class="col-6 col-lg-3">
-                  <p>9.0</p>
-                  <p>8.0</p>
-                  <p>9.0</p>
-                  <p>9.0</p>
-                  <p>8.0</p>
-                </div>
-                <div class="col-12 col-lg-6 d-flex">
-                  <div class="desc-hasil d-flex flex-column">
-                    <p>
-                      <span class="fw-bold">Description :</span> Remarkably
-                      sweet, rich-toned, deeply floral. Star jasmine, lychee,
-                      dried ginger, cocoa nib, myrrh in aroma and cup. Sweetly
-                      tart structure with juicy, lively acidity; delicate, very
-                      syrupy mouthfeel. Crisp, long, fruit- and cocoa-toned
-                      finish.
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <button class="btn btn-sm btn-primary text-white fw-bold me-auto">
-                See other coffe
-              </button>
-            </div>
+          <div class="hasil-rekomendasi-container col-12 col-md-6 d-flex flex-column" id="hasil-rekomendasi-container">
           </div>
         </section>
       </article>
 
       <article
         id="rekomendasi"
-        class="ppns d-flex flex-column text-center p-lg-5"
+        class="ppns d-flex flex-column text-center p-lg-5 d-none"
       >
         <div>
           <h2 class="osw">COFFE RECOMMENDATIONS</h2>
